# riemannian-gaussian-sampler

./: CMakeLists.txt  README.md  matrix_exp.md  phase_2_short_and_fat.md  phase_2_tall_and_skinny.md
cmake/: sampler-config.cmake.in
include/sampler/: angle_sampler_hmc.hpp  principal_angle_sampler.hpp  sampler_base.hpp  so_angle_sampler.hpp  so_gaussian_sampler.hpp  stiefel_gaussian_sampler.hpp  thread_config.hpp  xoshiro.hpp
include/sampler/anisotropic/: so_anisotropic_angle_sampler.hpp  so_anisotropic_gaussian_sampler.hpp  so_anisotropic_heterogeneous_gaussian_sampler.hpp  so_anisotropic_spatial_gaussian_sampler.hpp  so_hypersphere_sampler_cpu.hpp  so_hypersphere_sampler_cpu_spatial.hpp  so_hypersphere_sampler_gpu.hpp
include/sampler/isotropic/: principal_angle_sampler.hpp  so_angle_sampler.hpp  so_gaussian_sampler.hpp  so_heterogeneous_gaussian_sampler.hpp  stiefel_gaussian_sampler.hpp  stiefel_heterogeneous_gaussian_sampler.hpp
src/: angle_sampler_hmc.cpp  principal_angle_sampler.cpp  so_angle_sampler.cpp  so_gaussian_sampler.cpp  stiefel_gaussian_sampler.cpp  thread_config.cpp
src/anisotropic/: so_anisotropic_angle_sampler.cpp  so_anisotropic_gaussian_sampler.cpp  so_anisotropic_heterogeneous_gaussian_sampler.cpp  so_anisotropic_spatial_gaussian_sampler.cpp  so_hypersphere_sampler_cpu.cpp  so_hypersphere_sampler_cpu_spatial.cpp  so_hypersphere_sampler_gpu.cpp
src/isotropic/: principal_angle_sampler.cpp  so_angle_sampler.cpp  so_gaussian_sampler.cpp  so_heterogeneous_gaussian_sampler.cpp  stiefel_gaussian_sampler.cpp  stiefel_heterogeneous_gaussian_sampler.cpp
tests/: CMakeLists.txt  test_so_sampler.cpp  test_stiefel_sampler.cpp
tests/anisotropic/: CMakeLists.txt  test_phase2_acceptance_rate.cpp  test_phase2_visualise.cpp  test_so_anisotropic_heterogeneous_sampler.cpp  test_so_anisotropic_sampler.cpp  test_so_isotropic_sampler.cpp  visualise_so_samples.py
tests/isotropic/: CMakeLists.txt  so_angle_samples.h5  test_so_angle_sampler_save.cpp  test_so_sampler.cpp  test_stiefel_sampler.cpp  visualise_angles.py
